<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_semi_black_gradient"
    android:id="@+id/view_help"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:typeface="monospace"
        android:text="@string/help_header"
        android:id="@+id/tvTitle"/>
    <RelativeLayout
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:id="@+id/center_frame">

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:visibility="invisible"
            android:id="@+id/btn_replay"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_replay"
            android:contentDescription="Replay help tutorial" />
        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:id="@+id/iv_help_image"
            android:contentDescription="@string/help" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@id/center_frame"
        android:id="@+id/region1"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/x_force"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingRight="2dp"
                    android:paddingEnd="2dp"
                    android:textColor="#FFFFFF"
                    android:id="@+id/tvX_velocity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="#FFFFFF"
                    android:id="@+id/tv_x_direction"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:textColor="#FFFFFF"
                android:text="@string/y_force"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingRight="3dp"
                    android:paddingEnd="3dp"
                    android:textColor="#FFFFFF"
                    android:id="@+id/tvY_velocity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:id="@+id/tv_y_direction"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_help_title_2"
        android:text="@string/helper_title_control_the_ball"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_above="@id/region1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/tv_help_text"
        android:textStyle="bold"
        android:typeface="normal"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_below="@id/center_frame"/>
</RelativeLayout>