<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/single_player_game"
    >
    <View
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/img_flag"
        android:background="@drawable/img_flag"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:clipChildren="false"
        android:clipToPadding="false">
        <View
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:id="@+id/btn_back_single_player_game"
            android:background="@drawable/img_left_arrow"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:id="@+id/tvAverageScore_single_player"
            android:text="Avg: 55"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            />

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/img_top_score_single_player_game"
            android:background="@drawable/img_top_score"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/img_top_score_single_player_game"
            android:layout_toStartOf="@id/img_top_score_single_player_game"
            android:text="55"
            android:gravity="center"
            android:textSize="27sp"
            android:textColor="#FFFFFF"
            android:id="@+id/tvBestScore_single_player"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:id="@+id/region_score"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_white_09_circle">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider"
            android:layout_centerInParent="true"
            android:background="@drawable/background_white_circle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginTop="-9dp"
            android:gravity="center"
            android:text="@string/score_text"
            android:textSize="54sp"
            android:textColor="#99FFFFFF"
            android:id="@+id/tvScoreText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/divider"
            android:gravity="center"
            android:textSize="54sp"
            android:textColor="#90FFFFFF"
            android:id="@+id/tvScore"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="222dp"
        android:layout_height="222dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider_2"
            android:layout_centerVertical="true"
            android:background="@drawable/background_white_circle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_2"
            android:gravity="center"
            android:text="@string/app_title_2"
            android:textSize="54sp"
            android:textColor="#27FFFFFF"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/divider_2"
            android:text="@string/app_title_1"
            android:gravity="center"
            android:textSize="54sp"
            android:textColor="#27FFFFFF"
            />
    </RelativeLayout>


    <com.archer.crazy_circle_games.circle_run.game_logic.DeathPath
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/robot_path1"/>

    <com.archer.crazy_circle_games.circle_run.game_logic.CirclePath
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/circle_path"
        />
    <com.archer.crazy_circle_games.circle_run.game_logic.MyCircle
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/white_circle"
        android:layout_centerInParent="true"
        android:background="@drawable/background_white_circle"
        />

</RelativeLayout>
